# kinyu-demo

./: .gitignore  Dockerfile  LICENSE  README.md  demonstration.py  pyproject.toml  requirements.txt  setup.py
data/: eonia_marketdata.json  euribor6M_marketdata.json
doc/: contrib.md
docs/demo/warrant/: index.html
docs/demo/warrant/pkg/: package.json  warrants_wasm.d.ts  warrants_wasm.js  warrants_wasm_bg.wasm  warrants_wasm_bg.wasm.d.ts
docs/doctrees/: developer.doctree  environment.pickle  index.doctree  kydb.doctree  main.doctree  rimport.doctree
docs/html/: .buildinfo  developer.html  genindex.html  index.html  kydb.html  main.html  objects.inv  rimport.html  search.html  searchindex.js
docs/html/_sources/: developer.rst.txt  index.rst.txt  kydb.rst.txt  main.rst.txt  rimport.rst.txt
docs/html/examples/: Dependency_Graph.html  IR_Risk_in_Multicurve_Env.html  Remote_Import.html
docsrc/source/: conf.py  index.rst
html/: Dependency Graph.html  IR Risk in Multicurve Env.html  Remote_Import.html
notebooks/: Dependency Graph.ipynb  Dependency_Graph.ipynb  Distributed_Hedging_Sim.ipynb  IR Risk in Multicurve Env.ipynb  IR_Risk_in_Multicurve_Env.ipynb  Lambda_vs_Fargate.ipynb  Remote_Import.html  Remote_Import.ipynb  SVI_Calibration_Demo.ipynb  Sympy_and_Hedging.ipynb  graph_demonstration.ipynb  pca.ipynb
src/demo/rimport/: foo.py
src/kinyu/: main.py
src/kinyu/calc_graph/: __init__.py  graph.py  node.py
src/kinyu/calc_graph/tests/: test_calc_graph.py
src/kinyu/corr/: Cargo.toml  README.md  __init__.py  demo.py
src/kinyu/corr/src/: lib.rs
src/kinyu/credit/implied/: credit_curve.py  example.py
src/kinyu/credit/implied/tests/: test_credit_curve.py
src/kinyu/db/: README.md  api.py  base.py  config.py  db_obj.py  dynamodb.py  files.py  http.py  https.py  memory.py  redis.py  s3.py
src/kinyu/db/tests/: test_api.py  test_base.py  test_dynamodb.py  test_files.py  test_http.py  test_memory.py  test_redis.py  test_s3.py
src/kinyu/fixture/: swaps_demo.py
src/kinyu/floating_strike_warrant/: .gitignore  Cargo.toml  README.md  __init__.py  python_demo.py  timeseries_plot.py
src/kinyu/floating_strike_warrant/docs/: pricing_steps.md  quota_methodology.md  timeseries_plot.md
src/kinyu/floating_strike_warrant/src/: lib.rs
src/kinyu/floating_strike_warrant/tests/: test_pricing.py
src/kinyu/graph/: Cargo.toml  README.md  __init__.py
src/kinyu/graph/src/: lib.rs
src/kinyu/graph/tests/: test_graph.py  test_instance_methods.py
src/kinyu/rates/curve_builder/: Cargo.toml  README.md
src/kinyu/rates/curve_builder/examples/: swap_pricing.rs
src/kinyu/rates/curve_builder/src/: builder.rs  curve.rs  instruments.rs  lib.rs  pricing.rs
src/kinyu/rimport/: api.py  code_sync.py  uploader.py
src/kinyu/rimport/tests/: test_api.py  test_uploader.py
src/kinyu/tests/: test_main.py
src/kinyu/unittests/: test_main.py
src/kinyu/unittests/db/: test_api.py  test_base.py  test_dynamodb.py  test_memory.py  test_redis.py  test_s3.py
src/kinyu/unittests/rimport/: test_api.py
src/kinyu/vol/: README.md
src/kinyu/vol/historical/: Cargo.toml  README.md  demo.py
src/kinyu/vol/historical/src/: lib.rs
src/kinyu/vol/implied/: Cargo.toml  README.md  build.rs
src/kinyu/vol/implied/src/: lib.rs
src/kinyu/vol/nn/: README.md  data.py  model.py  surface.py  train.py  vol_nn_demonstration.py
src/kinyu/vol/nn/tests/: test_data.py  test_model_and_surface.py  test_training.py
src/kinyu/warrants/: Cargo-wasm.toml  Cargo.toml  README.md  WASM_DEMO_README.md  build_wasm.sh  demo_performance.md  serve_demo.py  test.py  warrants_demo.html
src/kinyu/warrants/.cargo/: config.toml
src/kinyu/warrants/src/: lib.rs  wasm_lib.rs
src/kinyu/warrants/tests/: test_demo.py
wheels/: corr-0.1.0-cp312-cp312-manylinux_2_34_x86_64.whl  implied-0.1.0-cp312-cp312-manylinux_2_34_x86_64.whl  warrants-0.1.0-cp312-cp312-manylinux_2_34_x86_64.whl
