[package]
name = "corr"
version = "0.1.0"
edition = "2021"

[lib]
name = "corr"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2" }
nalgebra = "0.32.5"
chrono = { version = "0.4.38", features = ["serde"] }

[dev-dependencies]
pyo3 = { version = "0.21.2", features = ["auto-initialize"] }

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]