[package]
name = "floating-strike-warrant"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.32"
pyo3 = { version = "0.21.0", features = ["extension-module", "chrono"] }
rand = "0.8"
rand_distr = "0.4"
chrono = { version = "0.4", features = ["serde"] }
statrs = "0.17"

[lib]
name = "_floating_strike_warrant"
crate-type = ["cdylib"]