[package]
name = "warrants"
version = "0.1.0"
edition = "2021"

[lib]
name = "warrants"
crate-type = ["cdylib"]

[dependencies]
nalgebra = "0.32.6"
statrs = "0.16.1"
rand = { version = "0.8.5", features = ["std_rng"] }
pyo3 = { version = "0.20.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }

[features]
default = ["pyo3"]
pyo3 = ["dep:pyo3", "pyo3/extension-module"]
wasm = ["dep:wasm-bindgen", "dep:js-sys"]