[package]
name = "curve_builder"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.32"
chrono = { version = "0.4", features = ["serde"] }
statrs = "0.17"
argmin = "0.10.0"
argmin-math = { version = "0.4.0", features = ["nalgebra_v0_32"] }

[lib]
name = "curve_builder"
crate-type = ["rlib"]