[package]
name = "implied"
version = "0.1.0"
edition = "2021"

[lib]
name = "implied"
crate-type = ["cdylib"]

[dependencies]
nalgebra = "0.32"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
rayon = "1.5"
thiserror = "1.0"
log = "0.4"
argmin = { version = "0.8.1", features = ["serde1"] }
argmin-math = { version = "0.3.0", features = ["nalgebra_v0_32-serde"] }
statrs = "0.16"
roots = "0.0.8"
pyo3 = { version = "0.18.3", features = ["extension-module", "auto-initialize"] }

[dev-dependencies]
criterion = "0.5"

[build-dependencies]
pyo3-build-config = "0.18.3"